RESOLVED FIXED200684
Fix potential thread safety issue under StorageManager::getSessionStorageOrigins()
https://bugs.webkit.org/show_bug.cgi?id=200684
Summary Fix potential thread safety issue under StorageManager::getSessionStorageOrig...
Chris Dumez
Reported 2019-08-13 12:39:47 PDT
Fix potential thread safety issue under StorageManager::getSessionStorageOrigins(). The origins are being passed from the background queue to the main thread without isolated copy.
Attachments
Patch (1.76 KB, patch)
2019-08-13 12:40 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-08-13 12:40:30 PDT
Geoffrey Garen
Comment 2 2019-08-13 13:22:35 PDT
Comment on attachment 376202 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-08-13 13:58:25 PDT
Comment on attachment 376202 [details] Patch Clearing flags on attachment: 376202 Committed r248633: <https://trac.webkit.org/changeset/248633>
WebKit Commit Bot
Comment 4 2019-08-13 13:58:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-08-13 13:59:17 PDT
Note You need to log in before you can comment on or make changes to this bug.