Fix potential thread safety issue under StorageManager::getSessionStorageOrigins() https://bugs.webkit.org/show_bug.cgi?id=200684

Reviewed by Geoffrey Garen.

Fix potential thread safety issue under StorageManager::getSessionStorageOrigins(). The origins are being
passed from the background queue to the main thread without isolated copy.

* NetworkProcess/WebStorage/StorageManager.cpp:
(WebKit::StorageManager::getSessionStorageOrigins):


Canonical link: https://commits.webkit.org/214428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248633 268f45cc-cd09-0410-ab3c-d52691b4dbfc